[package]
name = "ftc"
version = "11.0.0"
edition = "2024"

[package.metadata.ftc]
controller_version = "11.0"

[dependencies]
ftc-rust-proc = { path = "./ftc-rust-proc", optional = true }

# Last version is from two years ago, last commit is from a month ago
jni = { git = "https://github.com/jni-rs/jni-rs" }
paste = "1.0.15"

[features]
default = ["proc-macro"]
proc-macro = ["dep:ftc-rust-proc"]

[lints.rust]
missing_docs = "deny"

[lints.clippy]
missing_docs_in_private_items = "warn"
pedantic = { level = "warn", priority = -1 }
all = { level = "warn", priority = -1 }
ignore_without_reason = "warn"
alloc_instead_of_core = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
too_many_lines = "allow"
missing_panics_doc = "allow"
